# ProtoScan

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/protoscan/: __init__.py  __main__.py  ast_utils.py  cli.py  client_fingerprints.py  config.py  dataflow.py  dependency_analysis.py  gadget_detection.py  payload_guidance.py  payload_library.py  project_graph.py  reporters.py  runtime_detection.py  sink_detection.py  source_detection.py
src/protoscan/data/: client_gadget_fingerprints.json  payload_library.json  vuln-db.json
tests/: __init__.py  test_browser_fixture.py  test_cli.py  test_config.py  test_dataflow.py  test_dependency_analysis.py  test_gadget_detection.py  test_payload_library.py  test_project_graph.py  test_reports.py  test_runtime_detection.py  test_runtime_gadgets.py  test_sink_detection.py  test_source_detection.py  test_vuln_fixture.py
tests/data/: report_output.txt  sample-report.csv  sample-report.html  sample-report.json  sample-report.sarif  sample-report.txt  sample_app.js
tests/fixtures/browser_bundle/: app.js
tests/fixtures/client_chain/: app.js
tests/fixtures/client_gadgets/: app.js
tests/fixtures/client_parsers/: app.js
tests/fixtures/runtime_gadgets/: deno_app.js  node_app.js
tests/fixtures/vuln_app/: config.json  package-lock.json  package.json  server.js
